<resources>
    <string name="app_name">Poezie in buzunar</string>
    <string name="none">""</string>>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions.</string>

    <!--Strings related to AboutActivity-->
    <string name="about_activity_title">About</string>
    <string name="project_description">\t<i>Ce-ar fi dacă ne-am începe fiecare zi cu o poezie?</i>\n\n\tNu vă temeți, nu trebuie să
pricepeți sau să vă pricepeți! Trebuie doar să încercați! Nu citiți, intrați, spune
Dan Iancu în Cum să citești poezie,  lucrurile se vor așeza simplu în imaginația
voastră și veți fi fericiți de descoperire. Desigur, cu condiția ca poezia să fie
foarte bună măcar, și își amintește.\n\n\tUn alt prieten de-al meu, căruia îi dăruisem
o carte de-a mea, mi-a spus că nu pricepe nimic. „De ce ar trebui să pricepi
ceva?” l-am întrebat. Omul s-a uitat mirat la mine. ”Uite cum faci. Citești și-ți
închipui că lucrurile alea sunt aevea.” Ne-am întîlnit peste un timp. „Ai avut
dreptate!” a fost primul lucru pe care mi l-a spus. Fără povara idioată a datoriei
de a „înțelege”, a putut citi cartea fără probleme. Mi-a spus și care imagini
(imagini, nu poezii), i-au plăcut cel mai mult. Am trăit sentimentul că am salvat
pe cineva de la înec.\n\n\tIdeea proiectului nostru aparţine oamenilor extraordinari si extraordinar de
deschisi spre dialogul care depaseste granitele si conformismul de la <b>Interart
Triade </b>si <b>Levure Literaire</b>.\n\n\tParteneri la fel de activi şi vizibili ni s-au alaturat
pentru implementarea proiectului:<b> Editura Universitaţii de Vest, Librăria La Doua
Bufniţe</b> şi <b>Klak Verlag Berlin</b>.\n\n\tVerba Mananet este un proiect finanțat de <b>AFCN
Administrația Fondului Cultural Național</b>.
</string>

    <!--Strings related to ListActivity-->
    <string name="project_title">Verba Manent</string>
    <string name="poem_title">Titlul poeziei</string>

    <!--Strings related to MainActivity-->
    <string name="main_activity_title">Main activity</string>
    <string name="quote">&quot; Dacă pictura e poezie pe care o vedem, poezia este pictura pe care o simțim. &quot;\n ― Leonardo da Vinci</string>
    <string name="register">Register now</string>
    <string name="sign_in">Sign in</string>
    <string name="try_again">Try again </string>
    <string name="no_connection">No internet connection. Please check your internet settings.</string>
    <string name="oops"><b>Ooops!</b> </string>


    <!-- Strings related to LogInActivity -->
    <string name="forgot_password_dialog_title">Reset Password</string>
    <string name="forgot_password_dialog_username_hint">Username</string>
    <string name="forgot_password_dialog_password_hint">Password</string>
    <string name="forgot_password_dialog_confirm_password_hint">Confirm Password</string>
    <string name="welcome_message"><b>Welcome!</b></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot password</string>

    <!--Strings related to ReadPoemActivity-->
    <string name="read_poem_activity_title">ReadPoem activity</string>

    <!--Strings related to menu items-->
    <string name="read_poems">Read poems</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="log_out">Log out</string>


</resources>
