<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/forgot_password_dialog_margin_bottom"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/forgot_password_dialog_title_size"
            android:text="@string/forgot_password_dialog_title" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/forgot_password_dialog_username_hint"
            android:id="@+id/forgotPasswordUsernameEditText"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/forgot_password_dialog_password_hint"
            android:id="@+id/forgotPasswordPasswordEditText"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/forgot_password_dialog_confirm_password_hint"
            android:id="@+id/forgotPasswordConfirmEditText"/>

    </LinearLayout>

</LinearLayout>